trying to fix some paths to vercel 3.0

--- a/Html/index.html
+++ b/Html/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/app-pf-jogo-adivinha.css">
-    <script src="./js/app-pf-jogo-adivinha.js" defer></script>
+    <link rel="stylesheet" href="../Css/app-pf-jogo-adivinha.css">
+    <script src="../js/app-pf-jogo-adivinha.js" defer></script>
     <title>NumberGuess</title>
 </head>
 <body>
