--- a/Html/rules-page.html
+++ b/Html/rules-page.html
@@ -11,7 +11,7 @@
         <h1>NumberGuess</h1>
         <nav>
             <ul>
-                <li><a href="./app-pf-jogo-adivinha .html">Play Game</a></li>
+                <li><a href="./index.html">Play Game</a></li>
                 <li><a href="#">Game Rules</a></li>
             </ul>
         </nav>
